<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.college.owner.OwnerSignup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/transparent_color"
        android:padding="@dimen/padding_16">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_200"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_15"
            android:src="@drawable/login_illustration" />

        <EditText
            android:id="@+id/edt_owner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_15"
            android:background="@drawable/edtbg"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="@dimen/padding_10"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edt_owner_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_15"
            android:background="@drawable/edtbg"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/padding_10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16" />

        <EditText
            android:id="@+id/edt_owner_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_15"
            android:background="@drawable/edtbg"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/font_16" />

        <EditText
            android:id="@+id/edt_owner_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_15"
            android:background="@drawable/edtbg"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="@dimen/padding_10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textSize="@dimen/font_16" />

        <EditText
            android:id="@+id/edt_owner_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_15"
            android:background="@drawable/edtbg"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="@dimen/padding_10"
            android:maxLength="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16" />


        <EditText
            android:id="@+id/edt_owner_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_80"
            android:layout_marginTop="@dimen/padding_15"
            android:drawablePadding="@dimen/padding_10"
            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            android:background="@drawable/edtbg"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16" />

        <Button
            android:id="@+id/btn_owner_signup"
            android:layout_width="@dimen/padding_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_20"
            android:background="@drawable/btnbg"
            android:text="@string/singup"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16" />
    </LinearLayout>
</ScrollView>