<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.college.owner.ui.addvehicle.AddVehicleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_add_vehicle"
            android:layout_width="@dimen/padding_200"
            android:layout_height="@dimen/padding_200"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/edt_vehicle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_15"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            android:background="@drawable/edtbg"
            android:inputType="text"/>


        <EditText
            android:id="@+id/edt_vehicle_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_80"
            android:layout_marginTop="@dimen/padding_15"
            android:hint="@string/description"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            android:background="@drawable/edtbg"
            android:inputType="textMultiLine"/>
        <EditText
            android:id="@+id/edt_vehicle_rent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rent"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            android:background="@drawable/edtbg"
            android:layout_marginTop="@dimen/padding_15"
            android:inputType="numberDecimal"/>

        <Spinner
            android:id="@+id/spinner_Type"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/padding_15"
            android:hint="Select Type"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            android:entries="@array/product_type"
            android:background="@drawable/edtbg"/>

        <Button
            android:id="@+id/btn_add_vehicle"
            android:layout_width="@dimen/padding_180"
            android:layout_height="@dimen/padding_50"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/padding_15"
            android:background="@drawable/btnbg"
            android:textAllCaps="false"
            android:text="@string/add_vehicle"
            android:textColor="@color/white"
            android:textSize="@dimen/font_16" />
    </LinearLayout>
</ScrollView>