<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.college.tenant.TenantBooking">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_place_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                app:cardCornerRadius="@dimen/padding_5"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_vehicle"
                        android:layout_width="@dimen/padding_100"
                        android:layout_height="@dimen/padding_100"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/car_bg" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_vehicle_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/mercedes"
                            android:textColor="#333"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/txt_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/price"
                            android:textColor="@color/red"
                            android:textSize="16sp" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_personal_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                app:cardCornerRadius="@dimen/padding_5"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_10"
                        android:layout_marginRight="@dimen/padding_10"
                        android:background="@drawable/edtbg"
                        android:text="@string/personal_details"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_18" />

                    <TextView
                        android:id="@+id/txt_u_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_8"
                        android:layout_marginRight="@dimen/padding_10"
                        android:drawableLeft="@drawable/ic_person"
                        android:drawablePadding="@dimen/padding_10"
                        android:padding="@dimen/padding_5"
                        android:text="@string/john_mathew"
                        android:textSize="@dimen/font_16" />

                    <TextView
                        android:id="@+id/txt_u_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_5"
                        android:layout_marginRight="@dimen/padding_10"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="@dimen/padding_10"
                        android:padding="@dimen/padding_5"
                        android:text="@string/john_gmail_com"
                        android:textSize="@dimen/font_16" />

                    <TextView
                        android:id="@+id/txt_u_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_5"
                        android:layout_marginRight="@dimen/padding_10"
                        android:drawableLeft="@drawable/ic_phone"
                        android:drawablePadding="@dimen/padding_10"
                        android:padding="@dimen/padding_5"
                        android:text="@string/_9874561230"
                        android:textSize="@dimen/font_16" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_payment_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                app:cardCornerRadius="@dimen/padding_5"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_10"
                        android:layout_marginRight="@dimen/padding_10"
                        android:background="@drawable/edtbg"
                        android:text="@string/payment_details"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_18" />
                    <EditText
                        android:id="@+id/edt_card_holder_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_10"
                        android:layout_marginRight="@dimen/padding_10"
                        android:background="@drawable/border_edtbg"
                        android:hint="@string/enter_card_holder_name"
                        android:inputType="text"
                        android:textSize="@dimen/font_16" />
                    <EditText
                        android:id="@+id/edt_card_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_10"
                        android:layout_marginRight="@dimen/padding_10"
                        android:background="@drawable/border_edtbg"
                        android:hint="@string/enter_card_no"
                        android:inputType="number"
                        android:maxLength="16"
                        android:textSize="@dimen/font_16" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/edtbg">

                            <Spinner
                                android:id="@+id/spinneMonth"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:entries="@array/month" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/edtbg">

                            <Spinner
                                android:id="@+id/spinnerYear"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:entries="@array/year" />
                        </RelativeLayout>

                    </LinearLayout>
                    <EditText
                        android:id="@+id/edt_cvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_10"
                        android:layout_marginRight="@dimen/padding_10"
                        android:background="@drawable/border_edtbg"
                        android:hint="@string/enter_cvv"
                        android:inputType="phone"
                        android:maxLength="3"
                        android:textSize="@dimen/font_16" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/btn_buy_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/btnbg"
                android:text="@string/place_order"
                android:textColor="#fff"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>