<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_color"
    tools:context="com.college.tenant.TenantLogin">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_color"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent_color">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:background="@color/gradient"
                    android:src="@drawable/login_illustration" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/loginbg"
                android:layout_marginTop="@dimen/padding_280dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_16"
                    android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_to_continue"
                    android:textSize="@dimen/font_18"
                    android:layout_marginTop="@dimen/padding_10"
                    android:textColor="@color/black"/>
                    <EditText
                        android:id="@+id/edt_tenant_login_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_16"
                        android:maxLength="10"
                        android:layout_marginTop="@dimen/padding_15"
                        android:drawableLeft="@drawable/ic_phone"
                        android:drawablePadding="@dimen/padding_10"
                        android:inputType="phone"
                        android:background="@drawable/border_edtbg"/>
                    <EditText
                        android:id="@+id/edt_tenant_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textSize="@dimen/font_16"
                        android:textColor="@color/black"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_15"
                        android:inputType="textPassword"
                        android:background="@drawable/border_edtbg"/>
                    <Button
                        android:layout_width="@dimen/padding_200"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_tenant_login"
                        android:textSize="@dimen/font_16"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:background="@drawable/btnbg"
                        android:layout_marginTop="@dimen/padding_20"
                        android:text="@string/login"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_tenant_register"
                        android:text="@string/create_an_account"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/padding_30"
                        android:textSize="@dimen/font_15"
                        android:textColor="@color/purple_200"/>
                </LinearLayout>
            </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>