<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.college.tenant.TenantVehicleDetails">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_color"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_color">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:id="@+id/imageViewPPhoto"
                android:scaleType="fitCenter"
                android:src="@drawable/car_bg" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:src="@drawable/circle"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/padding_40"
                android:layout_marginLeft="@dimen/padding_20"
                android:id="@+id/backbtn"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/loginbg"
                android:layout_marginTop="@dimen/padding_280dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_16"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mercedes"
                        android:id="@+id/textViewPName"
                        android:textSize="@dimen/font_18"
                        android:layout_marginTop="@dimen/padding_10"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_tenant_register"
                        android:text="@string/vehicle_description"
                        android:textSize="@dimen/font_15"
                        android:justificationMode="inter_word"
                        android:textColor="@color/black"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_vehicle_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/padding_20"
                    android:layout_marginTop="@dimen/padding_5"
                    android:layout_marginBottom="@dimen/padding_20"
                    android:text="@string/price"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_booking_request"
                    android:layout_width="@dimen/padding_180"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/padding_20"
                    android:layout_marginRight="@dimen/padding_15"
                    android:layout_marginBottom="@dimen/padding_10"
                    android:background="@drawable/btnbg"
                    android:text="@string/booking_request"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_16" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>